# pdm-update-example

./: README.md  pyproject.toml
.github/workflows/: main.yml
