[project]
name = "pdm-update-example"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Saul Vargas", email = "saul.vargas@veriff.net"},
]
dependencies = [
    "pydantic==1.10.13",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
